scripts/llama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama
spec:
  replicas: 3
  selector:
    matchLabels:
      name: llama
  template:
    metadata:
      labels:
        name: llama
    spec:
      containers:
      - name: llama
        image: localhost:32000/llm-service
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: llama
spec:
  type: ClusterIP
  selector:
    name: llama
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
